# dunolint

./: .headache.dirs  .pre-commit-hooks.yaml  CHANGES.md  CODEOWNERS  COPYING.HEADER  NOTICE.md  README.md  dune  dune-project  dunolint  dunolint-dev.opam  dunolint-lib-base.opam  dunolint-lib.opam  dunolint-lib.opam.template  dunolint-tests.opam  dunolint.opam  dunolint.opam.template  dunolint.sh  headache.sh
.github/workflows/: ci.yml  crs.yml  (+7 more)
doc/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
doc/docs/explanation/linting-equilibrium/: README.md  comments-in-libraries.md  comments_in_libraries.ml  dune  prelude.txt
doc/docs/tutorials/quick-start/: README.md  dune  dunolint.txt  prelude.txt  quick_start.ml
dunolint-config/: README.md  dune  dunolint.sexp
dunolint-config/src/: config.ml  dune
lib/dunolint/src/: condition.ml  condition.mli  config.ml  config.mli  config_v0.ml  config_v0.mli  config_v1.ml  dune  dune.ml  dune.mli  dune_project.ml  dune_project.mli  dunolint.ml  dunolint.mli  edsl_std.ml  edsl_std.mli  glob.ml  glob.mli  import.ml  import.mli  linted_file_kind.ml  linted_file_kind.mli  path.ml  path.mli  predicate.ml  predicate.mli  rule.ml  rule.mli  sexp_helpers.ml  sexp_helpers.mli  stdlib_compat4xx.ml  stdlib_compat4xx.mli  trilang.ml  trilang.mli
lib/dunolint/src/dune0/: compilation_mode.ml  compilation_mode.mli  executable.ml  executable.mli  executable__name.ml  executable__name.mli  executable__public_name.ml  executable__public_name.mli  include_subdirs.ml  include_subdirs.mli  instrumentation.ml  instrumentation.mli  library.ml  library.mli  library__modes.ml  library__modes.mli  library__name.ml  library__public_name.ml  library__public_name.mli  lint.ml  lint.mli  package.mli  package__name.ml  package__name.mli  pp__name.ml  pp__name.mli  pps.ml  pps.mli  predicate.ml  predicate.mli  preprocess.ml  preprocess.mli  stanza.ml  stanza.mli  string_container_key.ml  string_container_key.mli
lib/dunolint/src/dune_project0/: dune_lang_version.ml  dune_lang_version.mli  generate_opam_files.ml  generate_opam_files.mli  implicit_transitive_deps.ml  implicit_transitive_deps.mli  implicit_transitive_deps__value.ml  implicit_transitive_deps__value.mli  name.ml  predicate.ml  predicate.mli
lib/dunolint_base/src/: dune  dune.ml  dune_project.mli  dunolint_base.ml  dunolint_base.mli
lib/dunolint_base/src/dune0/: compilation_mode.ml  compilation_mode.mli  executable.ml  executable.mli  executable__name.ml  executable__name.mli  executable__public_name.ml  executable__public_name.mli  instrumentation.ml  instrumentation.mli  library.ml  library.mli  library__name.ml  library__name.mli  library__public_name.ml  library__public_name.mli  package.ml  package.mli  package__name.ml  package__name.mli  pp.ml  pp.mli  pp__name.ml  pp__name.mli
lib/dunolint_base/src/dune_project0/: dune_lang_version.ml  dune_lang_version.mli  implicit_transitive_deps.mli  implicit_transitive_deps__value.ml  implicit_transitive_deps__value.mli  name.ml  name.mli
lib/dunolint_command/src/: cmd__lint.ml  dune  dunolint_command.ml
lib/dunolint_engine/src/: config.ml  config.mli  config_cache.ml  context.ml  context.mli  dune  dunolint_engine.ml  dunolint_engine.mli  file_kind.ml  path_in_workspace.ml  path_in_workspace.mli  running_mode.ml
lib/dunolinter/test/: dune  test__comment_handler.ml  test__comment_handler.mli  test__linter.ml  test__sexp_handler.ml
lib/test_helpers/src/: dune  test_helpers.ml  test_helpers.mli
src/dunolint/dune_linter/: dune  dune_linter.ml  dune_linter.mli  executable.ml  executable.mli  executable__name.ml  executable__name.mli  executable__public_name.ml  executable__public_name.mli  flags.ml  flags.mli  include_subdirs.ml  include_subdirs.mli  instrumentation.ml  instrumentation.mli  libraries.ml  libraries.mli  library.ml  library.mli  library__modes.ml  library__modes.mli  library__name.ml  library__name.mli  library__package.ml  library__package.mli  library__public_name.ml  library__public_name.mli  lint.ml  lint.mli  pps.ml  pps.mli  preprocess.ml  preprocess.mli
src/dunolint/dunolint_cli/: cmd__lint.ml  cmd__tools__config__validate.ml  cmd__tools__find_workspace_root.ml  cmd__tools__lint_file.ml  cmd__tools__lint_file.mli  common_helpers.ml  common_helpers.mli  dune  dunolint_cli.ml  dunolint_cli.mli  import.ml  import.mli  linter.ml  linter.mli  workspace_root.ml  workspace_root.mli
src/dunolint/dunolinter/: comment_handler.ml  comment_handler.mli  config_handler.ml  config_handler.mli  dune  dunolinter.ml  dunolinter.mli  dunolinter_intf.mli  enforce_result.ml  enforce_result.mli  handler.ml  handler.mli  linter.ml  linter.mli  linter_intf.mli  linters.ml  linters.mli  ordered_set.ml  ordered_set.mli  sections_handler.ml  sections_handler.mli  sexp_handler.ml  sexp_handler.mli  sexp_handler_intf.mli  stanza_linter.ml  stanza_linter.mli  stanza_linter_intf.mli
src/dunolint/stdlib/: code_error0.ml  code_error0.mli  dune  dunolint_stdlib.ml  dunolint_stdlib.mli  list0.mli  sexp0.ml  sexp0.mli  stdlib0.ml  stdlib0.mli  with_equal_and_sexp0.ml  with_equal_and_sexp0.mli
test/dunolint/dune_linter/: common.ml  common.mli  dune  test__dune_linter.ml  test__executable.ml  test__executable__name.ml  test__executable__public_name.ml  test__flags.ml  test__include_subdirs.ml  test__instrumentation.ml  test__libraries.ml  test__library.ml  test__library__inline_tests.ml  test__library__modes.ml  test__library__name.ml  test__library__package.ml  test__library__public_name.ml  test__lint.ml  test__pps.ml  test__preprocess.ml
test/dunolint/dune_project_linter/: common.ml  dune  test__dune_lang_version.ml  test__dune_project_linter.ml  test__generate_opam_files.ml  test__implicit_transitive_deps.ml  test__name.ml
test/dunolint/dunolint_engine/: dune  test__config_cache.ml  test__config_cache.mli  test__dunolint_engine.ml  test__file_kind.ml  test__path_in_workspace.ml  test__running_mode.ml
test/expect/: dune  prelude.txt  test__autofmt.ml  test__skip_subtree.ml
test/myers/: dune  test__myers.ml
(+522 files in other folders)
