(library
 (name dunolint_dunolint_config)
 (package dunolint-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Dunolint_stdlib
  -open
  Cmdlang)
 (libraries cmdlang dunolint dunolint_stdlib)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
