(library
 (name dunolint_expect_test)
 (package dunolint-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Pplumbing_err
  -open
  Stdio
  -open
  Dunolint_stdlib)
 (libraries
  base
  dunolint-lib
  dunolint_cli
  dunolint_engine
  dunolint_stdlib
  fpath
  fpath-base
  pplumbing-err
  stdio
  test_helpers
  unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
