(library
 (name dunolint_myers_test)
 (package dunolint-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Dunolint_stdlib
  -open
  Dunolint_myers)
 (libraries dunolint_myers dunolint_stdlib)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
