(library
 (name dunolint)
 (public_name dunolint-lib)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base)
 (libraries
  base
  dune-glob
  dunolint-lib.vendor_blang
  dunolint-lib.vendor_vcs
  fpath-base
  re)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))

(include_subdirs qualified)
