(library
 (name dunolint)
 (public_name dunolint-lib)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Sexplib0
  -open
  Sexplib0.Sexp_conv)
 (libraries dunolint-lib.vendor_blang dunolint-lib.vendor_vcs fpath-sexp0 re)
 (modules
  (:standard \ stdlib_compat4xx stdlib_compat5xx))
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_compare ppx_enumerate ppx_sexp_conv)))

(include_subdirs qualified)

(rule
 (enabled_if
  (< %{ocaml_version} 5.1))
 (target stdlib_compat.ml)
 (action
  (copy stdlib_compat4xx.ml %{target})))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.1))
 (target stdlib_compat.ml)
 (action
  (copy stdlib_compat5xx.ml %{target})))

(rule
 (enabled_if
  (< %{ocaml_version} 5.1))
 (target stdlib_compat.mli)
 (action
  (copy stdlib_compat4xx.mli %{target})))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.1))
 (target stdlib_compat.mli)
 (action
  (copy stdlib_compat5xx.mli %{target})))
