(library
 (name dunolint_base)
 (public_name dunolint-lib-base)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Base)
 (libraries
  base
  dunolint-lib
  dunolint-lib.vendor_blang
  dunolint-lib.vendor_vcs
  re)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps -unused-code-warnings=force ppx_compare ppx_enumerate ppx_sexp_conv)))

(include_subdirs qualified)
