(library
 (name dunolint_command)
 (public_name dunolint.dunolint_command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Cmdlang
  -open
  Dunolint.Std)
 (libraries
  base
  cmdlang
  dunolint-lib
  dunolint.dune_linter
  dunolint.dune_project_linter
  dunolint.dunolint_engine
  dunolint.dunolinter
  eio
  eio_main
  fpath
  fpath-base
  parsexp
  pp
  pp-log
  pp-log.cli
  pp-log.err
  pp-log.tty
  sexps-rewriter)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
