(library
 (name test_helpers)
 (public_name dunolint-tests.test_helpers)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Stdio
  -open
  Expect_test_helpers_base)
 (libraries
  base
  dune_linter
  dune_project_linter
  dunolint
  dunolinter
  expect_test_helpers_core.expect_test_helpers_base
  fpath-base
  loc
  pp
  pplumbing.err
  sexps-rewriter
  stdio)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
