(library
 (name dunolint_cli)
 (public_name dunolint.dunolint_cli)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Pplumbing_log
  -open
  Pplumbing_log_cli
  -open
  Stdio
  -open
  Dunolint_stdlib
  -open
  Cmdlang
  -open
  Dunolint.Std)
 (libraries
  base
  cmdlang
  dunolint-lib
  dunolint.dune_linter
  dunolint.dune_project_linter
  dunolint.dune_workspace_linter
  dunolint.dunolint_engine
  dunolint.dunolint_linter
  dunolint.dunolinter
  dunolint_stdlib
  fpath
  fpath-sexp0
  loc
  parsexp
  pp
  pplumbing-err
  pplumbing-log
  pplumbing-log-cli
  pplumbing-pp-tty
  re
  sexps-rewriter
  stdio
  unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
