(library
 (name dunolinter)
 (public_name dunolint.dunolinter)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Stdio
  -open
  Dunolint_stdlib
  -open
  Dunolint.Std)
 (libraries
  base
  dunolint-lib
  dunolint_stdlib
  file-rewriter
  fpath
  fpath-sexp0
  loc
  parsexp
  pp
  pplumbing-err
  pplumbing-pp-tty
  re
  sexps-rewriter
  stdio)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (modules_without_implementation
  dunolinter_intf
  linter_intf
  sexp_handler_intf
  stanza_linter_intf)
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
