(library
 (name dunolint_stdlib)
 (public_name dunolint.stdlib)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Sexplib0
  -open
  Sexplib0.Sexp_conv)
 (libraries sexplib0)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
