(library
 (name dune_linter_test)
 (package dunolint-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Dunolint_base
  -open
  Dunolint_stdlib
  -open
  Dunolint.Std)
 (libraries
  base
  dune_linter
  dunolint-lib-base
  dunolint_engine
  dunolint_stdlib
  dunolinter
  file-rewriter
  fpath-sexp0
  loc
  parsexp
  pp
  pplumbing-err
  sexps-rewriter
  test_helpers
  windtrap.myers)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
