(library
 (name dune_project_linter_test)
 (public_name dunolint-tests.dune_project_linter_test)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Expect_test_helpers_base
  -open
  Dunolint.Std)
 (libraries
  base
  dune_project_linter
  dunolint
  dunolinter
  expect_test_helpers_core.expect_test_helpers_base
  file-rewriter
  fpath-sexp0
  loc
  parsexp
  patdiff.expect_test_patdiff
  pp
  pplumbing-err
  sexps-rewriter
  test_helpers)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
