(library
 (name dunolint_engine_test)
 (package dunolint-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Stdio
  -open
  Dunolint_stdlib)
 (libraries
  base
  cmdlang
  cmdlang-stdlib-runner
  dune_linter
  dune_project_linter
  dunolint
  dunolint_engine
  dunolint_stdlib
  dunolinter
  file-rewriter
  fpath-sexp0
  pp
  pplumbing-err
  sexps-rewriter
  stdio
  unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
