(library
 (name linting_equilibrium)
 (package dunolint-dev)
 (inline_tests
  (deps dunolint.exe))
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Dunolint_stdlib)
 (libraries dunolint_stdlib unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))

(rule
 (package dunolint-dev)
 (target dunolint.exe)
 (deps
  (:exe %{project_root}/src/dunolint/bin/main.exe))
 (action
  (copy %{exe} %{target})))

(rule
 (package dunolint-dev)
 (enabled_if %{bin-available:mdexp})
 (target comments-in-libraries.md.gen)
 (deps comments_in_libraries.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package dunolint-dev)
 (enabled_if %{bin-available:mdexp})
 (alias runtest)
 (action
  (diff comments-in-libraries.md comments-in-libraries.md.gen)))
